# eceseminar

./: README.md
LinearRegression/: CMakeLists.txt  fd.cpp  fwd.cpp  rev.cpp  symb.cpp
LinearRegression/lib/: adj.cpp  adj.hpp  tls.cpp  tls.hpp
LogicGates/AND/: and.cpp
LogicGates/AND/lib/: adj.cpp
LogicGates/NOR/: nor.cpp
LogicGates/NOR/lib/: tls.cpp
LogicGates/OR/: or.cpp
LogicGates/OR/lib/: tls.hpp
LogicGates/XOR/: xor.cpp
LogicGates/XOR/lib/: adj.hpp
