cmake_minimum_required(VERSION 3.1)

    project(LinearRegression CXX)

        set(CMAKE_CXX_STANDARD 14) set(CMAKE_CXX_STANDARD_REQUIRED ON)

            add_executable(fd fd.cpp) add_executable(symb symb.cpp)
                add_executable(fwd fwd.cpp lib / tls.cpp)
                    add_executable(rev rev.cpp lib / adj.cpp)
